# PROBE

./: .codespellrc  .dmypy.json  .envrc  .gitignore  Justfile  LICENSE  Makefile  README.md  README.org  benchmark_results.csv  flake.nix  interpose.c  interpose.h  interpose2.c  libinterpose.dylib  performance_test.py  pyproject.toml  result  setup_devshell.sh  shell.nix  targets.nix  tasks.org  test.c  test.dot  test.py  test0  test0.c  test1.c  test1.dylib  test2  test2.c  test_program  test_program.c
benchmark/: .gitignore  PROBE_small_bench.csv  REPRODUCING.md  bpftrace_preexec.py  bpftrace_workload_preexec.py  cde.patch  citations.md  command.py  compare.py  compound_pattern.py  data_minimizer.py  dbus_watcher.py  experiment.py  filter_github_urls.py  flake.nix  http_load_test.py  httpd-configure.patch  httpd_run.py  inf_loop.sh  kalibera_perf.py  list.txt  ltrace-wrapper  ltrace.conf.3  ltrace.patch  mandala.patch  measure_resources.py  mine_datasets.py  mine_ml_papers.py  mine_spack_datasets.py  overnight_runner.sh  podman_run.sh  prov.bt  prov_bpf.c  prov_bpf.sh  prov_bpf_minimal.c  prov_collectors.py  provenance-to-use.patch  read_pid_from_file.c  result  result-bin  (+29 more)
benchmark/benchmark_utils/: .gitignore  Cargo.toml  benchmark-slice.nix  benchmark.slice  bpftrace_prov.bt  bpftrace_prov_template.bt  deploy_setuid.sh  log  pre_benchmark_config.yaml  syscalls.yaml  test.sh
benchmark/benchmark_utils/auditd_test/: enable.sh
benchmark/benchmark_utils/src/: cgroups.rs  lib.rs  privs.rs  sys_config.rs  util.rs
c-prov-tracer/: .gitignore  Makefile  PROBE  dump_ast.py  fd_table.c  flake.nix  gen_libc_hooks.py  gen_libprov.py  gen_op_parser.py  global_state.c  inode_triple.c  libc_hooks_source.c  libc_subset.c  libprov.c  libprov_prefix.c  libprov_suffix.c  lookup_on_path.c  notes.md  op_parser.py  parse_prov_log_dir.py  path_lib.c  probe_record  prov_buffer.c  prov_operations.c  prov_ops.c  prov_ops.h  simple.c  struct_parser.py  test.py  test_suite.py  unistd_subset.h  util.c
cli-wrapper/: Cargo.toml  deny.toml  flake.nix  frontend.nix  pyproject.toml
cli-wrapper/cli/: Cargo.toml
cli-wrapper/cli/src/: dump.rs  main.rs  record.rs  transcribe.rs  util.rs
cli-wrapper/derive_memory_parsing/: Cargo.toml
cli-wrapper/derive_memory_parsing/src/: lib.rs
cli-wrapper/derive_memory_parsing/tests/: test_struct.rs
cli-wrapper/headers/: Cargo.toml  build.rs
cli-wrapper/headers/src/: lib.rs
cli-wrapper/lib/: Cargo.toml  build.rs
cli-wrapper/lib/src/: error.rs  lib.rs  ops.rs  transcribe.rs
cli-wrapper/memory_parsing/: Cargo.toml
cli-wrapper/memory_parsing/src/: lib.rs  segments.rs  strings.rs  util.rs
cli-wrapper/probe_cli/: Cargo.toml
cli-wrapper/probe_cli/src/: main.rs  record.rs  transcribe.rs
cli-wrapper/probe_headers/: Cargo.toml  build.rs
cli-wrapper/probe_headers/src/: arena.rs  context.rs  generate.rs  lib.rs  main.rs  ops.rs  serialization_test.rs
cli_doc/: README.md  cli_doc_generator.py
docs/: .gitignore  Containerfile  acm-rep-pres.html  acm-template.tex  appendix.tex  benchmarks.md  citations-to-latex.lua  containers.md  datasets.org  developers_readme.md  flake.nix  how_it_works.md  initialization.md  lit_review.md  meat.tex  new_paper_todos.md  notes.md  (+18 more)
probe_py/: .gitignore  analysis.py  cli.py  consts.py  file_closure.py  generate_headers.py  graph_utils.py  parser.py  pyproject.toml  stub_uploader.diff  types.py  validators.py  workflows.py
probe_py/mypy_stubs/networkx/: __init__.pyi  digraph.pyi
probe_py/mypy_stubs/networkx/drawing/: __init__.pyi  nx_pydot.pyi
probe_py/mypy_stubs/pydot/: __init__.pyi
probe_py/mypy_stubs/scipy/: __init__.pyi
probe_py/mypy_stubs/scipy/cluster/: __init__.pyi  hierarchy.pyi
probe_py/probe_py/: .dmypy.json  .gitignore  analysis.py  cli.py  consts.py  dataflow_graph.py  dataflow_graph_old.txt  file_closure.py  graph_utils.py  hb_graph.py  hb_graph_accesses.py  parser.py  persistent_provenance.py  persistent_provenance_db.py  process_tree.py  ptypes.py  remote_access.py  scp.py  simple_dataflow_graph.py  ssh_argparser.py  util.py  validators.py  workflow.py  workflows.py
probe_py/tests/: test_graph.py  test_ssh_arg_parse.py  test_workflow.py
probe_src/frontend/macros/: Cargo.toml
probe_src/frontend/macros/src/: lib.rs
probe_src/probe_frontend/: .envrc  Cargo.toml  LICENSE  README.md  build.rs  build.sh  configure  deny.toml  flake.nix  frontend.nix  rust-stuff.nix
probe_src/probe_frontend/cli/: Cargo.toml
probe_src/probe_frontend/cli/src/: dump.rs  main.rs  record.rs  util.rs
probe_src/probe_frontend/lib/: Cargo.toml  build.rs
probe_src/probe_frontend/lib/src/: error.rs  ffi.rs  lib.rs  metadata.rs  ops.rs  transcribe.rs
probe_src/probe_frontend/macros/: Cargo.toml
probe_src/probe_frontend/macros/src/: lib.rs  pygen.rs
probe_src/probe_frontend/python/: LICENSE  ops.py  probe.py  pyproject.toml
probe_src/probe_frontend/src/: arena.rs  display.rs  ffi.rs  main.rs  metadata.rs  ops.rs
probe_src/python/: LICENSE  README.md  pyproject.toml
probe_src/python/probe_py/manual/: __init__.py  analysis.py  cli.py  consts.py  container_image.py  file_closure.py  graph_utils.py  parse_probe_log.py  persistent_provenance.py  persistent_provenance_db.py  remote_access.py  scp.py  ssh_argparser.py  test_probe.py  types.py  validators.py  workflows.py
probe_src/python/probe_py/manual/persistance_provenance/: database.py
prov-tracer/: Cargo.toml  README.org  a.out  flake.nix  test  test.c  test.sh
prov-tracer/project_specific_macros/: Cargo.toml
prov-tracer/project_specific_macros/src/: lib.rs  parsable.rs
prov-tracer/src/: dynamic_types.rs  globals.rs  lib.rs  null_prov_logger.rs  prov_logger.rs  semantic_prov_logger.rs  simple_prov_logger.rs  strace_prov_logger.rs  util.rs
prov-tracer/testf/: Cargo.toml  README.org  test.sh
prov-tracer/testf/src/: exe.rs  lib.rs
prov-tracer/testg/: Cargo.toml  test.sh
prov-tracer/testg/src/: lib.rs
prov-tracer/testh/: lib.c  main  main.c  test.sh
prov-tracer/tests/: exec.c  forking_exec  raw_exec
prov-tracer/tmp/: 6601.prov.trace
(+433 files in other folders)
