[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "probe_py.manual"
authors = [
    {name = "Samuel Grayson", email = "sam@samgrayson.me"},
    {name = "Shofiya Bootwala"},
    {name = "Saleha Muzammil"},
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "probe_py.generated",
    "networkx",
    "pygraphviz",
    "pydot",
    "rich",
    "typer",
]

[project.urls]
Home = "https://github.com/charmoniumQ/PROBE"
