[package]
name = "benchmark_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
glob = "0.3.2"
itertools = "0.14.0"
libc = "0.2.169"
nix = { version = "0.29.0", features = ["user", "fs"]}
once = "0.3.4"
rlimit = "0.10.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
stacked_errors = "0.7.0"
which = "7.0.1"
