[package]
name = "benchmark_utils"
version = "0.1.0"
edition = "2021"
description = """
The purpose of this crate is:

1. To easily set-and-unset config for benchmarking. Wherever possible, the
   system should not be persistently modified, even for the current boot.

2. To make it easier to ask admins on systems that I don't have root on. The
   config changes should be done by setuid binaries, so I don't have to ask them
   to change configs every time I want to benchmark something. Also it should be
   easy to read, so they ensure I'm not doing something malicious.

Read the bins in src/bin to see what they do.

"""

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
libc = "0.2.169"
nix = { version = "0.29.0", features = ["user", "fs", "resource", "signal", "sched"]}
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
stacked_errors = "0.7.0"
tempdir = "0.3.7"
which = "7.0.1"

[lints.clippy]
pedantic = {level = "warn", priority = -1}
missing_errors_doc = "allow"
