[package]
name = "probe_cli"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
exec = "0.3.1"
flate2 = "1.0.30"
libc = "0.2.155"
log = "0.4.21"
probe_lib = { path = "../lib" }
probe_headers = { path = "../headers" }
tar = "0.4.41"
tempfile = "3.19.1"
fs_extra = "1.3.0"

[lints]
workspace = true
