[package]
name = "derive_memory_parsing"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[lib]
name = "derive_memory_parsing"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
eyre = "0.6.12"

[dev-dependencies]
trybuild = "1.0.114"
memory_parsing = { version = "0.2", path = "../memory_parsing" }

[lints]
workspace = true
