[package]
name = "probe_headers"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[lib]
name = "probe_headers"
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.28.0"

[lints]
workspace = true

[dependencies]
clap = {version = "4.5.35", features = ["derive"]}
