[package]
name = "probe_lib"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "probe_lib"
path = "src/lib.rs"

[dependencies]
libc = "0.2.155"
log = "0.4.21"
machine-info = "1.0.9"
probe_macros = { path = "../macros" }
probe_headers = { path = "../headers" }
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[build-dependencies]
bindgen = "0.69.4"

[lints]
workspace = true
