[package]
name = "memory_parsing"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[lib]
name = "memory_parsing"
path = "src/lib.rs"

[dependencies]
eyre = "0.6.12"
itertools = "0.14.0"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
pastey = "0.2.1"
schemars = "1.2.1"
serde = "1.0.228"
serde_bytes = "0.11.19"

[lints]
workspace = true
