[package]
name = "probe_cli"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
flate2 = "1.0.30"
libc = "0.2.155"
log = "0.4.21"
probe_headers = { path = "../probe_headers" }
memory_parsing = { path = "../memory_parsing" }
tar = "0.4.41"
tempfile = "3.19.1"
fs_extra = "1.3.0"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
rmp-serde = "1.3.1"
serde = "1.0.228"

[lints]
workspace = true
