[package]
name = "probe_headers"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[lib]
name = "probe_headers"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "serialization_test"
path = "src/serialization_test.rs"


[dependencies]
clap = {version = "4.5.35", features = ["derive"]}
eyre = "0.6.12"
memory_parsing = { version = "0.2", path = "../memory_parsing" }
derive_memory_parsing = { version = "0.2", path = "../derive_memory_parsing" }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
schemars = "1.2.0"
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
eyre = "0.6.12"
cbindgen = "0.28.0"

[lints]
workspace = true

[dev-dependencies]
