[package]
name = "testf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
redhook = "2.0.0"

[lib]
name = "testf"
path = "src/lib.rs"
crate_type = ["dylib"]

[[bin]]
name = "exe"
path = "src/exe.rs"
