[package]
name = "probe_cli"
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["cargo"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
exec = "0.3.1"
flate2 = "1.0.30"
libc = "0.2.155"
log = "0.4.21"
probe_frontend = { path = "../lib" }
rand = "0.8.5"
serde =  "1.0.203"
serde_json = "1.0.118"
tar = "0.4.41"

[lints]
workspace = true
