[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "probe_py.generated"
authors = [
  {name = "Jenna Filgor", email = "jenna@fligor.net"},
  {name = "Samuel Grayson", email = "sam@samgrayson.me"},
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/charmoniumQ/PROBE"
